tanzu-kubernetes-cluster-configs/ingress/ingress-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-<NAME>
spec:
  ingressClassName:              # Value of .metadata.name from Ingress class resource.
  rules:
  - host: "<FQDN>"
    http:
      paths:
      - pathType: Prefix         # Matches based on a URL path prefix split by /
        path: "/"
        backend:
          service:
            name: <SERVICENAME>  # Name of the Deployment Service which should be used
            port:
              number: <PORT>
